--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.468.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
